--- a/style.css
+++ b/style.css
@@ -275,6 +275,10 @@ body {
     padding: 20px 0;
 }
 
+.img-slider{
+  padding: 10px 10px;
+}
+
 .gallery-item {
     border-radius: 15px;
     overflow: hidden;
@@ -300,7 +304,7 @@ body {
 .slick-next {
     width: 40px;
     height: 40px;
-    background: rgba(255, 255, 255, 0.9);
+    background: rgba(0, 0, 0, 0.9);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -315,7 +319,7 @@ body {
     color: var(--accent-white);
 }
 
-.slick-prev i,
+/* .slick-prev i,
 .slick-next i {
     font-size: 1.2rem;
     color: var(--primary-orange);
@@ -324,7 +328,7 @@ body {
 .slick-prev:hover i,
 .slick-next:hover i {
     color: var(--accent-white);
-}
+} */
 
 .slick-prev {
     left: -50px;
